--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,3 +7,6 @@ setw -g mode-keys vi
 
 set -g repeat-time 1
 set -sg escape-time 1
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
