--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,5 @@ set -sg escape-time 1
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-bind p run 'ssh qiwenbo@10.8.131.212 "cat ~/.clipboard"|xargs -0 tmux send-keys -l'
-bind P run 'ssh qiwenbo@10.8.131.212 "cat ~/.clipboard"|pbcopy'
+bind -t vi-copy y copy-pipe 'tee ~/.clipboard > /dev/null'
 set -g default-terminal "screen-256color"
