--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,4 +11,8 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind -t vi-copy y copy-pipe 'tee ~/.clipboard > /dev/null'
+
+bind c new-window -c "#{pane_current_path}"
+set-option -g default-shell /bin/zsh
+
 set -g default-terminal "screen-256color"
